@@ -2,14 +2,14 @@ package ua.lysenko.andrii.zip.web;
 
 import org.springframework.stereotype.Service;
 
+import java.nio.file.Path;
 import java.nio.file.Paths;
 
 //@Service
 public class UnixFileSystemService extends FileSystemService {
 
     public UnixFileSystemService() {
-        baseDir = Paths.get("/Users/andriilysenko/storage/files");
-        tmpZipDir = baseDir.getParent().resolve("tmp");
+        super(Paths.get("/Users/andriilysenko/storage/files"), Path.of("tmp"));
     }
 
 }
